edit page meta data

--- a/static/css/webslides.css
+++ b/static/css/webslides.css
@@ -1335,6 +1335,20 @@ header[role='banner'] {
     vertical-align: middle;
     width: 4.8rem; }
 
+/*=== 3.1. Logo 2 === */
+.logo_2 {
+  text-transform: lowercase; }
+  .logo_2 a {
+    background: url("../images/logos/nbs-bank.png") no-repeat 0 0;
+    background-size: 4.8rem;
+    float: left;
+    height: 4.8rem;
+    text-indent: -4000px;
+    /*If you remove text-indent and add: */
+    /*padding-left: 6rem;*/
+    vertical-align: middle;
+    width: 4.8rem; }
+
 /*=========================================
 4. Navigation
 =========================================== */
