--- a/static/css/webslides.css
+++ b/static/css/webslides.css
@@ -1337,7 +1337,9 @@ header[role='banner'] {
 
 .table_style {
   background-color: #E7313F;
+  color: #fff;
 }
+
 
 /*=== 3.1. Logo 2 === */
 .logo_2 {
