--- a/static/css/webslides.css
+++ b/static/css/webslides.css
@@ -1340,6 +1340,7 @@ header[role='banner'] {
   color: #fff;
 }
 
+.faint_red {background-color: rgba(255, 0, 0, 0.3);} 
 
 /*=== 3.1. Logo 2 === */
 .logo_2 {
